--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1005,7 +1005,7 @@ section h2 {
   0% {
     transform: translateY(0);
   }
-  40% {
+  60% {
     transform: translateY(15px);
   }
   80% {
@@ -1017,18 +1017,27 @@ section h2 {
 }
 
 .active .pitch-icon.wave img {
-  animation: wave-motion 2s 1 forwards;
+  animation: wave-motion 3s 1 forwards;
 }
 
 @keyframes wave-motion {
   0% {
     transform: translateX(0);
   }
-  25% {
+  15% {
     transform: translateX(-10px);
   }
-  50% {
+  30% {
     transform: translateX(10px);
+  }
+  45% {
+    transform: translateX(-10px);
+  }
+  60% {
+    transform: translateX(10px);
+  }
+  80% {
+    transform: translateX(0);
   }
   100% {
     transform: translateX(0);
@@ -1036,14 +1045,26 @@ section h2 {
 }
 
 .active .pitch-icon.jump img {
-  animation: jump-bounce 1.5s 1 forwards;
+  animation: jump-bounce 3s 1 forwards;
 }
 
 @keyframes jump-bounce {
   0% {
     transform: translateY(0);
   }
+  10% {
+    transform: translateY(-20px);
+  }
+  20% {
+    transform: translateY(0);
+  }
   30% {
+    transform: translateY(-20px);
+  }
+  40% {
+    transform: translateY(0);
+  }
+  50% {
     transform: translateY(-20px);
   }
   60% {
