--- a/src/styles/clickable-map.css
+++ b/src/styles/clickable-map.css
@@ -11,7 +11,17 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
+}
 
+/* Limit width on larger screens */
+@media (min-width: 1024px) {
+  .pitch-chapters-view > div {
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 /* Clickable image map styles */
