--- a/src/styles/clickable-map.css
+++ b/src/styles/clickable-map.css
@@ -45,7 +45,7 @@
   z-index: 10;
   width: 85%;
   max-width: 800px;
-  height: 799px;
+  height: 99vh;
   min-height: 60vh;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
