--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1723,8 +1723,8 @@ section h2 {
   transform: scale(1.2);
 }
 
-/* Feedback messages */
-.feedback-message {
+/* Feedback messages and melody name */
+.feedback-message, .melody-name {
   background-color: var(--accent-color);
   color: var(--text-color);
   padding: 1rem;
